# Real-Estate-Intelligence

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: refresh-market-data.yml
.streamlit/: config.toml  secrets.toml.example
docs/: launch-checklist.md
scripts/: build_data_engine.py  build_data_snapshot.py  build_warehouse.py  check_data_freshness.py  create_developer_projects_table.sql  fetch_rega_data.py  fetch_sale_indicators.py  validate_release.py
src/real_estate_intel/: .gitignore  __init__.py  analytics.py  auth.py  brand.py  catalog.py  data_engine.py  data_prep.py  decision_support.py  developer_ai.py  developer_projects.py  forecasting.py  official_sources.py  rega_client.py  reporting.py  sales.py  underwriting.py  user_profiles.py
tests/: test_auth.py  test_brand.py  test_database_url.py  test_decision_support.py  test_developer_ai.py  test_developer_projects.py  test_forecasting.py  test_reporting.py  test_sales_data.py  test_underwriting.py  test_user_profiles.py
