[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "real-estate-intel"
version = "0.1.0"
packages = ["real_estate_intel"]
package_dir = {"" = "src"}
dependencies = [
    "pandas>=2.0",
    "plotly>=6.0",
    "requests>=2.32",
    "streamlit>=1.30",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]